syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "DriverBusPrototype.DriverCommands.Models";

message CommandResult {
  string Id = 1;  
  bool IsSuccess = 2;
  google.protobuf.Int32Value ErrorCode = 3;
  google.protobuf.StringValue ErrorMessage = 4;
}